<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".FCadastro">

    <EditText
        android:id="@+id/senha"
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="205dp"
        android:hint="@string/txt_senha"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirmar_senha"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="237dp"
        android:hint="@string/txt_confirmarSenha"
        android:inputType="textPassword" />

    <Spinner
        android:id="@+id/spn_areaInteresse"
        android:layout_width="216dp"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="157dp"
        android:hint="@string/spn_areaInteresse" />

    <Spinner
        android:id="@+id/spn_competencias"
        android:layout_width="216dp"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="69dp"
        android:hint="@string/spn_competecia" />

    <EditText
        android:id="@+id/nomeCompleto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:hint="@string/txt_nomeCompleto"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="123dp"
        android:ems="10"
        android:hint="@string/txt_email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:text="@string/btt_cadastrar"
        android:onClick="OnClick"/>

</RelativeLayout>