<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="94dp"
        android:text="@string/lbl_login"
        android:textAlignment="center"
        android:textSize="30sp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="189dp"
        android:ems="10"
        android:hint="@string/txt_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txt_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="242dp"
        android:ems="10"
        android:hint="@string/txt_senha"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="77dp"
        android:onClick="Entrar"
        android:text="@string/btt_login" />

    <TextView
        android:id="@+id/txt_cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="187dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="CriarConta"
        android:text="@string/txt_cadastrar"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textStyle="normal"
        android:visibility="visible" />

    <TextView
        android:id="@+id/txt_trocarSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="149dp"
        android:clickable="false"
        android:focusable="true"
        android:onClick="TrocarSenha"
        android:text="@string/btt_trocarSenha"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:textStyle="normal"
        android:visibility="visible" />


</RelativeLayout>